--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,7 @@ header {
 }
 
 header section {
+  position: relative;
   padding-right: 10px;
 }
 
@@ -58,18 +59,40 @@ header section img {
   height: 80px;
 }
 
+#search{
+  display: none;
+}
+
+#search:checked ~ #search-form{
+  display: block;
+}
+
+#search-form{
+  display: none;
+  position: absolute;
+  top: -10%;
+  right: 100%;
+  box-shadow: 10px 10px 10px var(--gray);
+}
+
+#search-form input{
+  height: 2rem;
+  width: 13rem;
+}
+
 #menu {
   display: none;
 }
 
 #menu:checked ~ nav {
   display: block;
+  z-index: 100;
 }
 
 nav {
   display: none;
   position: absolute;
-  top: 80px;
+  top: 170%;
 }
 
 nav ul {
@@ -82,7 +105,7 @@ nav ul {
 }
 
 nav ul li {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   padding: 5px;
 }
 
@@ -117,7 +140,6 @@ main {
   border-radius: 0px 10px;
   box-shadow: 10px 10px 10px var(--gray);
   overflow: hidden;
-  background-color: var(--blue);
 }
 
 .car-inner {
@@ -126,26 +148,30 @@ main {
   display: flex;
   flex-wrap: nowrap;
   overflow: hidden;
-  padding: 5px 5px 25px 5px;
+  padding: 1% 1% 2% 1%;
 }
 
-.car-inner:after {
-  color: white;
-  content: ".";
-}
+/* .car-inner:after {
+  color: var(--blue);
+  content: "..";
+} */
 
 .carousel-child {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  row-gap: 10px;
-  column-gap: 10px;
-  margin: 3px 8px;  
+  row-gap: 4%;
+  column-gap: 2%;
+  margin: 1% 3%;  
 }
 
 .carousel-item {
   border: 1px var(--gray-dark) solid;
   background-color: white;
-  border-radius: 5% 0%;
+}
+
+.after{
+  padding: 0 1.2%;
+  width: 100px;
 }
 
 .carousel-item:hover {
@@ -155,12 +181,21 @@ main {
 .carousel-item img {
   margin: 10px 0px;
   width: 100px;
-  border-radius: 0%;
+  border-radius: 20%;
 }
 
 .carousel-item {
-  color: black;
+  color: white;
   text-decoration: none;
+  position: relative;
+}
+
+.carousel-item div{
+  background-color: var(--blue);
+  padding: 4px 0;
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
 }
 
 .start-learning {
