--- a/css/variables.css
+++ b/css/variables.css
@@ -12,4 +12,7 @@
     --transition-dur-0-4: .4s;
     --scale1-2: 1.2;
 
+    --radius-def: 0px 10px;
+    --shadow-def: 5px 5px 10px var(--gray);
+
 }
