--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,10 @@ a {
 
 /* header */
 header {
+  position: fixed;
+  top:0;
+  z-index: 8;
+  width: 100%;
   display: flex;
   background-color: var(--blue);
   height: 80px;
@@ -96,15 +100,14 @@ header section img {
 
 #search:checked ~ #search-form {
   display: block;
-  z-index: 10;
+  z-index: 12;
 }
 
 #search-form {
   display: none;
   position: absolute;
-  top: -7%;
+  top: -48%;
   right: 100%;
-  box-shadow: var(--shadow-def);
 }
 
 #search-form input {
@@ -192,6 +195,8 @@ main {
   text-align: center;
   width: 98%;
   margin: 0 auto;
+  margin-top: 80px;
+  padding-top: 10px;
 }
 
 .car-nav {
