--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,14 @@ a {
   margin-left: 10px;
 }
 
+.msg-nothing{
+  display: block;
+  font-size: 1.2rem;
+  padding: 30px;
+  font-style: italic;
+  color: var(--blue)
+}
+
 /* header */
 header {
   position: fixed;
