--- a/css/account.css
+++ b/css/account.css
@@ -108,3 +108,14 @@ button:disabled{
 p:last-child {
   margin-bottom: 30px;
 }
+
+.fixed{
+  box-sizing: border-box;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+
+.empty{
+  padding: 10%;
+}
