--- a/css/style.css
+++ b/css/style.css
@@ -38,31 +38,36 @@ h2 {
 a {
   font-style: italic;
   font-weight: bold;
+} 
+
+a:hover{
+  text-decoration: underline;
 }
 
-.wrapper{
+.wrapper {
   background-color: white;
+  min-width: 360px;
 }
 
-.error{
+.error {
   color: red;
   font-size: 0.9rem;
   font-style: italic;
   margin-left: 10px;
 }
 
-.msg-nothing{
+.msg-nothing {
   display: block;
   font-size: 1.2rem;
   padding: 30px;
   font-style: italic;
-  color: var(--blue)
+  color: var(--blue);
 }
 
 /* header */
 header {
   position: fixed;
-  top:0;
+  top: 0;
   z-index: 8;
   width: 100%;
   display: flex;
@@ -90,7 +95,7 @@ header section img {
   transition: var(--transition-dur);
 }
 
-.logo:hover{
+.logo:hover {
   transform: scale(var(--scale1-2));
 }
 
@@ -98,11 +103,11 @@ header section img {
   display: none;
 }
 
-.search-image{
+.search-image {
   transition: var(--transition-dur);
 }
 
-.search-image:hover{
+.search-image:hover {
   transform: scale(var(--scale1-2));
 }
 
@@ -123,11 +128,11 @@ header section img {
   width: 13rem;
 }
 
-.account-image{
+.account-image {
   transition: var(--transition-dur);
 }
 
-.account-image:hover{
+.account-image:hover {
   transform: scale(var(--scale1-2));
 }
 
@@ -135,11 +140,11 @@ header section img {
   display: none;
 }
 
-.menu-image{
+.menu-image {
   transition: var(--transition-dur);
 }
 
-.menu-image:hover{
+.menu-image:hover {
   transform: scale(var(--scale1-2));
 }
 
@@ -149,7 +154,7 @@ header section img {
   z-index: 100;
 }
 
-.menu-title{
+.menu-title {
   display: block;
   padding: 8%;
   width: 85%;
@@ -192,7 +197,7 @@ nav a {
   color: var(--blue);
 }
 
-.nav--img{
+.nav--img {
   display: block;
   height: auto;
   width: 100%;
@@ -207,12 +212,12 @@ main {
   padding-top: 10px;
 }
 
-.main{
+.main {
   display: flex;
   position: relative;
 }
 
-.left-big{
+.left-big {
   position: absolute;
   display: flex;
   align-items: center;
@@ -225,17 +230,18 @@ main {
   z-index: 2;
 }
 
-.left-big img, .right-big img{
+.left-big img,
+.right-big img {
   box-sizing: border-box;
   width: 100%;
   padding: 0 10%;
 }
 
-.left-big:hover{
+.left-big:hover {
   background-color: var(--gray);
 }
 
-.right-big{
+.right-big {
   position: absolute;
   display: flex;
   align-items: center;
@@ -248,7 +254,7 @@ main {
   z-index: 2;
 }
 
-.right-big:hover{
+.right-big:hover {
   background-color: var(--gray);
 }
 
@@ -272,9 +278,10 @@ main {
   border-radius: var(--radius-def);
   box-shadow: var(--shadow-def);
   overflow: hidden;
+  box-sizing: border-box;
 }
 
-.car-inner {
+.carousel-inner {
   width: 97%;
   height: 300px;
   display: flex;
@@ -283,17 +290,22 @@ main {
   padding: 1% 1% 2% 1%;
 }
 
-.carousel-child {
+.carousel-page {
+  box-sizing: border-box;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  row-gap: 4%;
-  column-gap: 2%;
-  margin: 1% 3%;
+  row-gap: 15px;
+  column-gap: 10px;
+  margin: 0 5px;
 }
 
-.carousel-item {
+.page-item {
+  box-sizing: border-box;
   border: 1px var(--gray-dark) solid;
   background-color: white;
+  text-decoration: none;
+  position: relative;
+  color: white;
 }
 
 .after {
@@ -301,23 +313,17 @@ main {
   width: 100px;
 }
 
-.carousel-item:hover {
+.page-item:hover {
   background-color: var(--gray);
 }
 
-.carousel-item img {
+.page-item img {
   margin: 10px 0px;
   width: 100px;
   border-radius: 20%;
 }
 
-.carousel-item {
-  color: white;
-  text-decoration: none;
-  position: relative;
-}
-
-.carousel-item div {
+.page-item div {
   background-color: var(--blue);
   padding: 4px 0;
   position: absolute;
@@ -325,27 +331,27 @@ main {
   width: 100%;
 }
 
-#previous:hover{
+#previous:hover {
   transition: var(--transition-dur);
   transform: scale(var(--scale1-2));
 }
 
-#next:hover{
+#next:hover {
   transition: var(--transition-dur);
   transform: scale(var(--scale1-2));
 }
 
-#circle1:hover{
+#circle1:hover {
   transition: var(--transition-dur);
   transform: scale(var(--scale1-2));
 }
 
-#circle2:hover{
+#circle2:hover {
   transition: var(--transition-dur);
   transform: scale(var(--scale1-2));
 }
 
-#circle3:hover{
+#circle3:hover {
   transition: var(--transition-dur);
   transform: scale(var(--scale1-2));
 }
@@ -364,7 +370,7 @@ main {
   box-shadow: var(--shadow-def);
 }
 
-.cta{
+.cta {
   position: absolute;
   right: 5px;
   bottom: 5px;
@@ -377,7 +383,7 @@ main {
   transition: var(--transition-dur);
 }
 
-.cta:hover{
+.cta:hover {
   background-color: white;
   color: var(--blue);
 }
@@ -386,11 +392,132 @@ main {
 footer {
   background-color: var(--blue);
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   padding: 20px 20px;
 }
 
 footer a {
   text-decoration: none;
   color: white;
+  margin: 0 5px;
+}
+
+@media screen and (min-width: 600px) {
+
+  .wrapper {
+    width: 80%;
+    margin: 0 auto;
+  }
+  header {
+    width: 80%;
+  }
+}
+
+@media screen and (min-width: 700px) {
+  :root {
+    font-size: 16px;
+  }
+
+  .menu-image {
+    display: none;
+  }
+
+  .menu-title,
+  .nav--img {
+    display: none;
+  }
+
+  nav a{
+    margin: 0 10px;
+  }
+  nav {
+    transition: none;
+    flex-direction: row;
+    width: 80%;
+    left: 0;
+    top: 80px;
+    border: none;
+    height: auto;
+  }
+
+  nav ul {
+    flex-direction: row;
+    width: 100%;
+    justify-content: center;
+  }
+
+  header section {
+    text-align: right;
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  header section > nav {
+    margin: 0 10%;
+  }
+
+  main {
+    margin: 110px auto;
+  }
+
+  #search-form {
+    right: 100%;
+  }
+}
+
+@media screen and (min-width: 960px) {
+
+  :root {
+    font-size: 17px;
+  }
+
+  main{
+    max-width: 800px;
+  }
+
+  .wrapper {
+    width: 70%;
+    margin: 0 auto;
+    max-width: 1100px;
+  }
+
+  header {
+    width: 70%;
+    max-width: 1100px;
+  }
+
+  header section > nav {
+    margin: 0 15%;
+  }
+
+  nav {
+    flex-direction: row;
+    width: 70%;
+    max-width: 1100px;
+  }
+
+  .page-item{
+    height: 170px;
+  }
+
+  .page-item img{
+    width: 130px;
+  }
+
+  .carousel, .carousel-inner{
+    height: 390px;
+  }
+
+  .left-big, .right-big{
+   top: 4%;
+   height: 92%; 
+  }
+  
+}
+
+@media screen and (min-width:1600px){
+  header section > nav {
+    margin-left: -550px;
+    left: 50%;
+  }
 }
