--- a/css/style.css
+++ b/css/style.css
@@ -440,6 +440,10 @@ footer a {
     height: auto;
   }
 
+  .fixed{
+    width: 80%;
+  }
+
   nav ul {
     flex-direction: row;
     width: 100%;
@@ -457,7 +461,7 @@ footer a {
   }
 
   main {
-    margin: 110px auto;
+    margin: 130px auto;
   }
 
   #search-form {
@@ -492,6 +496,11 @@ footer a {
 
   nav {
     flex-direction: row;
+    width: 70%;
+    max-width: 1100px;
+  }
+
+  .fixed{
     width: 70%;
     max-width: 1100px;
   }
