--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /* Include other css files */
 
 @import url(reset.css);
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,100;0,400;1,100;1,400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700");
 @import url(variables.css);
 @import url(tutorials.css);
 @import url(tutorial.css);
@@ -11,11 +11,16 @@
 @import url(account-details.css);
 @import url(contact.css);
 
+@font-face {
+  font-family: "Engadget";
+  src: url("./Engadget.ttf");
+}
+
 html,
 body {
   height: 100%;
   background-color: var(--gray);
-  font-family: Roboto, sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 h1,
@@ -24,7 +29,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Engadget", sans-serif;
 }
 
 h1 {
@@ -273,11 +278,11 @@ main {
   justify-content: center;
 }
 
-.autoplay{
+.autoplay {
   width: 40px;
 }
 
-.autoplay:hover{
+.autoplay:hover {
   background-color: var(--gray);
 }
 
@@ -322,6 +327,13 @@ main {
   text-decoration: none;
   position: relative;
   color: white;
+  overflow: hidden;
+}
+
+.page-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .after {
@@ -331,12 +343,6 @@ main {
 
 .page-item:hover {
   background-color: var(--gray);
-}
-
-.page-item img {
-  margin: 10px 0px;
-  width: 100px;
-  border-radius: 20%;
 }
 
 .page-item div {
@@ -425,7 +431,7 @@ footer a {
   }
   header {
     width: 80%;
-  }
+  } 
 }
 
 @media screen and (min-width: 700px) {
@@ -513,7 +519,7 @@ footer a {
     width: 70%;
     max-width: 1100px;
   }
-
+  
   .fixed {
     width: 70%;
     max-width: 1100px;
@@ -521,10 +527,6 @@ footer a {
 
   .page-item {
     height: 170px;
-  }
-
-  .page-item img {
-    width: 130px;
   }
 
   .carousel,
