--- a/css/search.css
+++ b/css/search.css
@@ -1,5 +1,6 @@
 .search--thumb {
   height: 40px;
+  border-radius: 10px 0px 0 10px;
 }
 
 .search-item-container {
@@ -19,9 +20,8 @@
 
 .search-item {
   text-align: left;
-  padding: 10px;
-  margin: 15px 5px;
-  border: 1px var(--gray) solid;
-  border-radius: 10px 10px;
-  box-shadow: 5px 5px 10px var(--gray);
+    padding: 0 10px 0 0;
+    border: 1px var(--gray) solid;
+    border-radius: 10px 10px;
+    box-shadow: 5px 5px 10px var(--gray);
 }
