--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ body {
   height: 100%;
   background-color: var(--gray);
   font-family: "Open Sans", sans-serif;
+  min-width: 460px;
 }
 
 h1,
@@ -169,7 +170,7 @@ header section img {
 .menu-title {
   display: block;
   padding: 8%;
-  width: 85%;
+  width: 84.3%;
   background-color: var(--blue);
   color: white;
   font-family: "Open Sans", sans-serif;
