--- a/css/search.css
+++ b/css/search.css
@@ -1,5 +1,6 @@
 .search--thumb {
-  height: 40px;
+  height: 80px;
+  width: 100px;
   border-radius: 10px 0px 0 10px;
 }
 
@@ -8,7 +9,7 @@
   align-items: center;
 }
 
-.search-item{
+.search-item {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -20,8 +21,9 @@
 
 .search-item {
   text-align: left;
-    padding: 0 10px 0 0;
-    border: 1px var(--gray) solid;
-    border-radius: 10px 10px;
-    box-shadow: 5px 5px 10px var(--gray);
+  padding: 0 10px 0 0;
+  margin-bottom: 10px;
+  border: 1px var(--gray) solid;
+  border-radius: 10px 10px;
+  box-shadow: 5px 5px 10px var(--gray);
 }
